# pipecat-wavix

./: .env.example  .gitignore  README.md  bot.py  pyproject.toml  server.py
.github/workflows/: publish.yml
src/pipecat_wavix/: __init__.py  wavix_serializer.py
