[build-system]
requires = ["setuptools>=69", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "pipecat-wavix"
version = "1.0.1"
description = "Wavix WebSocket serializer for Pipecat"
requires-python = ">=3.10"
readme = "README.md"
authors = [
    {name = "Wavix", email="support@wavix.com"}
]

keywords = ["wavix", "pipecat", "voice", "telephony", "websocket", "audio", "serializer"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Communications :: Telephony",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
    "pipecat-ai[deepgram,runner,websocket]>=0.0.105",
]

[project.optional-dependencies]
examples = [
  "fastapi>=0.115",
  "pyngrok>=7.0.0",
  "python-dotenv>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pipecat_wavix"]

[project.urls]
Homepage = "https://github.com/wavix/pipecat-wavix"
Repository = "https://github.com/wavix/pipecat-wavix"
Issues = "https://github.com/wavix/pipecat-wavix/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]